DOCS-1130: Convert blockquotes to admonitions for CE (3.14)

--- a/calico-enterprise_versioned_docs/version-3.14/_includes/release-notes/_v3.14.4-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/_includes/release-notes/_v3.14.4-release-notes.mdx
@@ -1,9 +1,13 @@
 Jan 10 2023
 
-> **Note**: There is a change to the upgrade instructions in this release. When applying the new `tigera-operator.yaml`
-> or `customer-resources.yaml` you must use additional flags `--server-side` and `--force-conflicts`. This is because
-> the CRDs are now too large to apply in the normal way.
-> Tigera Operator version has been updated to v1.27.17. Please see [release notes](https://github.com/tigera/operator/releases/tag/v1.27.17) for details.
+:::note
+
+There is a change to the upgrade instructions in this release. When applying the new `tigera-operator.yaml`
+or `customer-resources.yaml` you must use additional flags `--server-side` and `--force-conflicts`. This is because
+the CRDs are now too large to apply in the normal way.
+Tigera Operator version has been updated to v1.27.17. Please see [release notes](https://github.com/tigera/operator/releases/tag/v1.27.17) for details.
+
+:::
 
 This is a larger than normal patch release that includes backported enhancements and fixes intended to address problems seen
 when upgrading clusters at high scale:
@@ -28,7 +32,7 @@ is also likely to work.
 
 ## Bug Fixes
 
-- Fixed a bug causing Calico Node to restart during upgrades when upgrading from v3.10 and before, due to the  
+- Fixed a bug causing Calico Node to restart during upgrades when upgrading from v3.10 and before, due to the
   addition of the TPROXYMode setting in the Felix Configuration resource.
 - Fixed a bug causing liveness checks to fail for Calico Node during upgrades, due to changed field names in TLS secrets.
 - Fixed a bug that prevented [controlPlaneNodeSelector](../../reference/installation/api.mdx#operator.tigera.io/v1.InstallationSpec)
@@ -74,7 +78,7 @@ filtering out updates that `calico-node` doesn't care about (thus reducing CPU u
   release with this feature, the benefit will only be seen when doing an upgrade _from_ this release.
 - Typha now supports compression on its protocol; this gives a 5:1 reduction in bandwidth use and snapshot data size.
   Compression is automatically enabled when a supporting client connects.
-- Typha now shares computed (and compressed) snapshots between clients that connect at approximately the same time.  
+- Typha now shares computed (and compressed) snapshots between clients that connect at approximately the same time.
   This significantly reduces CPU usage and the time to service all clients when many clients connect at once. In a
   cluster with 150k Pods, generating a snapshot can take 2-3s of CPU time so, if 100 clients connect at once, there
   can be a 200-300 second saving in CPU used, and a corresponding increase in throughput. Typha has prometheus metrics to
