--- a/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/ebpf-and-eks.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/ebpf-and-eks.mdx
@@ -81,7 +81,7 @@ container-optimised OS with an emphasis on security; it has a version of the ker
 - Follow the instructions in the [getting started guide](../../getting-started/install-on-clusters/eks.mdx) to install {{prodname}}
   using the Amazon VPC CNI (Calico CNI cannot be installed on Bottlerocket at this time), with the following tweak:
 
-  Set `spec.flexVolumePath` to `/var/lib/kubelet/plugins` in the `Installation` resource in the `custom-resources.yaml`.  
+  Set `spec.flexVolumePath` to `/var/lib/kubelet/plugins` in the `Installation` resource in the `custom-resources.yaml`.
   This can be done by editing `custom-resources.yaml` or by applying the YAML and then immediately running the following command to
   patch the `Installation` resource:
 
@@ -135,9 +135,13 @@ which is suitable:
       --max-pods-per-node 100
     ```
 
-    > **Tip**: Without the `--max-pods-per-node` option above, EKS will limit the
-    > [number of pods based on node-type](https://github.com/awslabs/amazon-eks-ami/blob/master/files/eni-max-pods.txt).
-    > See `eksctl create nodegroup --help` for the full set of node group options.
+    :::note
+
+    Without the `--max-pods-per-node` option above, EKS will limit the
+    [number of pods based on node-type](https://github.com/awslabs/amazon-eks-ami/blob/master/files/eni-max-pods.txt).
+    See `eksctl create nodegroup --help` for the full set of node group options.
+
+    :::
 
 </TabItem>
 </Tabs>
