--- a/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/install.mdx
@@ -215,7 +215,7 @@ to reach the API server we create a `ConfigMap` with the API server's "real" add
 installing the Tigera Operator. That means that the operator itself can also use the direct connection and hence
 it doesn't require `kube-proxy` to be running.
 
-The tabs below explain how to find the "real" address of the API server for a range of distributions.  
+The tabs below explain how to find the "real" address of the API server for a range of distributions.
 **Note:** In all cases it's important that the address used is stable even if your API server is restarted or
 scaled up/down. If you have multiple API servers, with DNS or other load balancing in front it's important to use
 the address of the load balancer. This prevents {{prodname}} from being disconnected if the API servers IP changes.
@@ -304,12 +304,16 @@ data:
 EOF
 ```
 
-> **Tip**: If you forget to create the config map before installing the operator you can create it afterwards and
-> then wait 60 seconds before restarting the operator:
->
-> ```
-> kubectl delete pod -n tigera-operator -l k8s-app=tigera-operator
-> ```
+:::tip
+
+If you forget to create the config map before installing the operator you can create it afterwards and
+then wait 60 seconds before restarting the operator:
+
+```
+kubectl delete pod -n tigera-operator -l k8s-app=tigera-operator
+```
+
+:::
 
 ### Install the Tigera Operator
 
@@ -359,12 +363,16 @@ Then apply the edited file:
 kubectl create -f custom-resources.yaml
 ```
 
-> **Tip**: If you already created the custom resources, you can switch your cluster over to eBPF mode by updating the
-> installation resource. The operator will automatically apply the change.
->
-> ```batch
-> kubectl patch installation.operator.tigera.io default --type merge -p '{"spec":{"calicoNetwork":{"linuxDataplane":"BPF", "hostPorts":null}}}'
-> ```
+:::tip
+
+If you already created the custom resources, you can switch your cluster over to eBPF mode by updating the
+installation resource. The operator will automatically apply the change.
+
+```batch
+kubectl patch installation.operator.tigera.io default --type merge -p '{"spec":{"calicoNetwork":{"linuxDataplane":"BPF", "hostPorts":null}}}'
+```
+
+:::
 
 ### Monitor the progress of the installation
 
