--- a/calico-enterprise_versioned_docs/version-3.14/reference/resources/globalreport.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/reference/resources/globalreport.mdx
@@ -131,10 +131,14 @@ Use the `NamesAndLabelsMatch`to limit the scope of endpoints. If both `names`
 and `selector` are specified, the resource is identified using label _AND_ name
 match.
 
-> **Note**: To use the {{prodname}} compliance reporting feature, you must ensure all required resource types
-> are being audited and the logs archived in Elasticsearch. You must explicitly configure the [Kubernetes API
-> Server](../../visibility/kube-audit.mdx) to send audit logs for Kubernetes-owned resources
-> to Elasticsearch.
+:::note
+
+To use the {{prodname}} compliance reporting feature, you must ensure all required resource types
+are being audited and the logs archived in Elasticsearch. You must explicitly configure the [Kubernetes API
+Server](../../visibility/kube-audit.mdx) to send audit logs for Kubernetes-owned resources
+to Elasticsearch.
+
+:::
 
 ## Supported operations
 
