--- a/calico-enterprise_versioned_docs/version-3.14/visibility/elastic/troubleshoot.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/visibility/elastic/troubleshoot.mdx
@@ -32,11 +32,11 @@ The following user-configured resources are related to Elasticsearch:
    | Kube controllers (often overlooked) | `kubectl logs -n calico-system -l k8s-app=calico-kube-controllers`                                                                                  |
    | Kubernetes API server               | `kubectl logs -n kube-system -l component=kube-apiserver`<br />**Note**: See you platform documentation for specific command if above doesn't work. |
 
-1. Check if there are multiple replicas or statefulsets of Kibana or Elasticsearch.  
+1. Check if there are multiple replicas or statefulsets of Kibana or Elasticsearch.
    `kubectl get all -n tigera-kibana` and/or `kubectl get all -n tigera-elasticsearch`
-1. Check if any of the pods in the `tigera-elasticsearch` namespace are pending.  
+1. Check if any of the pods in the `tigera-elasticsearch` namespace are pending.
    `kubectl get pod -n tigera-elasticsearch`
-1. Check the TigeraStatus for problems.  
+1. Check the TigeraStatus for problems.
    `kubectl get tigerastatus -o yaml`
 
 ## How to handle expired license
@@ -47,8 +47,13 @@ If Elasticsearch platinum or enterprise license expires, ECK operator will switc
 
 ## How to create a new cluster
 
-> **Important**: Be aware that removing LogStorage temporarily removes Elasticsearch from your cluster. Features that depend on LogStorage are temporarily unavailable, including the dashboards in the Manager UI. Data ingestion is also temporarily paused, but will resume when the LogStorage is up and running again.  
-> Follow these steps to create a new Elasticsearch cluster.
+:::note
+
+Be aware that removing LogStorage temporarily removes Elasticsearch from your cluster. Features that depend on LogStorage are temporarily unavailable, including the dashboards in the Manager UI. Data ingestion is also temporarily paused, but will resume when the LogStorage is up and running again.
+
+:::
+
+Follow these steps to create a new Elasticsearch cluster.
 
 1. (Optional) To delete all current data follow this step. For each PersistentVolume in StorageClass `tigera-elasticsearch` that is currently mounted, set the ReclaimPolicy to `Recycle` or `Delete`.
 1. Export your current LogStorage resource to a file.
