--- a/calico-enterprise_versioned_docs/version-3.14/_includes/content/_calico-upgrade.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/_includes/content/_calico-upgrade.mdx
@@ -1,6 +1,10 @@
-> **Important**: Once you begin the migration, stop using `calicoctl` or
-> otherwise modifying the etcdv2 datastore. Any changes to etcdv2
-> data will not be migrated to the new datastore.
+:::note
+
+Once you begin the migration, stop using `calicoctl` or
+otherwise modifying the etcdv2 datastore. Any changes to etcdv2
+data will not be migrated to the new datastore.
+
+:::
 
 1. To begin an interactive data migration session, use the `start` command. While
    existing connectivity will continue as before, you cannot add any new endpoints
