--- a/calico-enterprise_versioned_docs/version-3.14/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/networking/egress/egress-gateway-on-prem.mdx
@@ -405,10 +405,15 @@ with `<source IP>` being one of the IPs of the egress IP pool that you provision
 Because egress gateway deployments are not currently managed by the Tigera Operator, it is necessary to upgrade
 egress gateway deployments manually.
 
-> **Note**: When upgrading egress gateway deployments, both the image and the deployment spec need to be changed in
-> tandem; upgrading only the image version can result in a non-functioning egress gateway. Newer versions of the
-> egress gateway image require new volume mounts and environment variables and have other structural changes.
-> To upgrade an egress gateway deployment:
+:::note
+
+When upgrading egress gateway deployments, both the image and the deployment spec need to be changed in
+tandem; upgrading only the image version can result in a non-functioning egress gateway. Newer versions of the
+egress gateway image require new volume mounts and environment variables and have other structural changes.
+
+:::
+
+To upgrade an egress gateway deployment:
 
 - Before upgrading egress gateways to a particular version, upgrade the other {{prodname}} components
   first. The egress gateway image should never be newer than the other {{prodname}} components. We recommend
