--- a/calico-enterprise_versioned_docs/version-3.14/operations/comms/crypto-auth.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/comms/crypto-auth.mdx
@@ -93,9 +93,13 @@ sudo kubectl create secret generic cnx-manager-tls --from-file=cert=/etc/kuberne
 --from-file=key=/etc/kubernetes/pki/apiserver.key -n kube-system
 ```
 
-> **Note** If you are using certificates not from a third party CA,
-> you will need to also add your certificates to your web browser.
-> See the `Troubleshooting` section for details.
+:::note
+
+If you are using certificates not from a third party CA,
+you will need to also add your certificates to your web browser.
+See the `Troubleshooting` section for details.
+
+:::
 
 The `.crt` and `.key` files should be the TLS certificate and key respectively
 that you are using for securing the traffic with TLS. If you need to replace the
