--- a/calico-enterprise_versioned_docs/version-3.14/reference/host-endpoints/failsafe.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/reference/host-endpoints/failsafe.mdx
@@ -25,11 +25,15 @@ described in [Configuring
 Felix](../component-resources/node/felix/configuration.mdx). They
 can be disabled by setting each configuration value to "none".
 
-> **Important**: Removing the inbound failsafe rules can leave a host inaccessible.
->
-> Removing the outbound failsafe rules can leave Felix unable to connect
-> to the datastore.
->
-> Before disabling the failsafe rules, we recommend creating a policy to
-> replace it with more-specific rules for your environment: see
-> [Creating policy for basic connectivity](connectivity.mdx).
+:::note
+
+Removing the inbound failsafe rules can leave a host inaccessible.
+
+Removing the outbound failsafe rules can leave Felix unable to connect
+to the datastore.
+
+Before disabling the failsafe rules, we recommend creating a policy to
+replace it with more-specific rules for your environment: see
+[Creating policy for basic connectivity](connectivity.mdx).
+
+:::
