--- a/calico-enterprise_versioned_docs/version-3.14/reference/host-endpoints/objects.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/reference/host-endpoints/objects.mdx
@@ -58,13 +58,15 @@ key/value pairs that can be used in selector expressions.
 
 <!-- TODO(smc) data-model: Link to new data model docs. -->
 
-> **Important**: When rendering security rules on other hosts, {{prodname}} uses the
-> `expectedIPs` field to resolve label selectors
-> to IP addresses. If the `expectedIPs` field is omitted
-> then security rules that use labels will fail to match
-> this endpoint.
-> Or, if you knew that the IP address should be 10.0.0.1, but not the name
-> of the interface:
+:::note
+
+When rendering security rules on other hosts, {{prodname}} uses the
+`expectedIPs` field to resolve label selectors
+to IP addresses. If the `expectedIPs` field is omitted
+then security rules that use labels will fail to match
+this endpoint.
+Or, if you knew that the IP address should be 10.0.0.1, but not the name
+of the interface:
 
 ```batch
 calicoctl create -f - <<EOF
@@ -81,6 +83,8 @@ calicoctl create -f - <<EOF
     expectedIPs: ["10.0.0.1"]
 EOF
 ```
+
+:::
 
 After you create host endpoint objects, Felix will start policing
 traffic to/from that interface. If you have no policy or profiles in
