--- a/calico-enterprise_versioned_docs/version-3.14/reference/resources/caliconodestatus.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/reference/resources/caliconodestatus.mdx
@@ -15,9 +15,13 @@ The updating of `CalicoNodeStatus` will have a small performance impact on CPU/M
 
 In our testing on a ten node, full mesh cluster, a `CalicoNodeStatus` resource was created for each node where the update interval was set to ten seconds. On each node, this resulted in an increase in CPU use of 5% of a vCPU and an increase of 4MB of memory. The control plane node recorded an increase in CPU usage of 5% of a vCPU for these 10 nodes.
 
-> **Warning**: The implementation of `CalicoNodeStatus` is designed to handle a small number of nodes (less than 10 is recommended) reporting back status in the same time. If `CalicoNodeStatus` are created for a large number of nodes, and with short update interval,
-> the kubernetes apiserver may become slower and less responsive.
-> You should create `CalicoNodeStatus` for the node you are interested in and for debugging purpose only. `CalicoNodeStatus` resource should be deleted upon the completion of the debugging process.
+:::caution
+
+The implementation of `CalicoNodeStatus` is designed to handle a small number of nodes (less than 10 is recommended) reporting back status in the same time. If `CalicoNodeStatus` are created for a large number of nodes, and with short update interval,
+the kubernetes apiserver may become slower and less responsive.
+You should create `CalicoNodeStatus` for the node you are interested in and for debugging purpose only. `CalicoNodeStatus` resource should be deleted upon the completion of the debugging process.
+
+:::
 
 ## Sample YAML
 
