--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -74,7 +74,7 @@ You can enable WAF in your cluster using the User Interface:
   width='600'
 />
 
-- on the page click on *Configure Web Application Firewall* to enable WAF in the cluster.
+- on the page click on **Configure Web Application Firewall** to enable WAF in the cluster.
 
 <img
   src='/img/calico-enterprise/master/waf-configure.png'
@@ -82,7 +82,7 @@ You can enable WAF in your cluster using the User Interface:
   width='600'
 />
 
-**Alternatively You can enable WAF manually by configuring ApplicationLayer CRD.**
+**Alternatively you can enable WAF manually by configuring ApplicationLayer CRD.**
 
 Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the webApplicationFirewall section of the file. Ensure value of the field is set to Enabled.
 
@@ -116,7 +116,7 @@ You will be presented with a window containing a *kubectl* command that you will
   width='600'
 />
 
-**Alternatively You can annotate the services you wish to enable WAF for as shown.**
+**Alternatively you can annotate the services you wish to enable WAF for as shown.**
 
 ```batch
 kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging=true
