--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -63,7 +63,7 @@ With {{prodname}} WAF, you gain visibility into internal east/west traffic at th
 
 ### Configure a cluster for WAF
 
-#### Step 1: Enable WAF in you cluster
+#### Step 1: Enable WAF in your cluster
 
 You can enable WAF in your cluster using the User Interface:
 - click on **Threat Defense** and select **Web Application Firewall**
@@ -107,8 +107,8 @@ Once you cluster is configured for WAF you will be presented with a list of Kube
   width='600'
 />
 
-From the *Action* column you can then select *Enable* or *Disable* action to respectively enable or disable WAF for each of the services.
-You will be presented with a window containing a *kubectl* command that you will be required to execute for the action to take effect.
+From the **Action** column you can then select **Enable** or **Disable** action to respectively enable or disable WAF for each of the services.
+You will be presented with a window containing a **kubectl** command that you will be required to execute for the action to take effect.
 
 <img
   src='/img/calico-enterprise/master/waf-enable.png'
