DOCS-1130: Convert blockquotes to admonitions for CE (3.15)

--- a/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/aws.mdx
@@ -67,7 +67,11 @@ To use kOps to create a cluster with {{prodname}} networking and network policy:
     <name-of-your-cluster>
    ```
 
-   > **Note:** The name of the cluster must be chosen as a valid DNS name belonging to the root user. It can either be a subdomain of an existing domain name or a subdomain which can be configured on AWS Route 53 service. More details on DNS domain requirements on the `kops` command can be found in Kubernetes' [documentation for kops](https://kubernetes.io/docs/setup/production-environment/tools/kops/#2-5-create-a-route53-domain-for-your-cluster).
+   :::note
+
+   The name of the cluster must be chosen as a valid DNS name belonging to the root user. It can either be a subdomain of an existing domain name or a subdomain which can be configured on AWS Route 53 service. More details on DNS domain requirements on the `kops` command can be found in Kubernetes' [documentation for kops](https://kubernetes.io/docs/setup/production-environment/tools/kops/#2-5-create-a-route53-domain-for-your-cluster).
+
+   :::
 
    Or, you you can add `cni` to your cluster config. Run `kops update cluster --name=<name-of-your-cluster>` and set the following networking configuration.
 
@@ -76,7 +80,11 @@ To use kOps to create a cluster with {{prodname}} networking and network policy:
      cni: {}
    ```
 
-   > **Note:** Setting the `--networking cni` flag delegates the installation of the CNI to the user for a later stage.
+   :::note
+
+   Setting the `--networking cni` flag delegates the installation of the CNI to the user for a later stage.
+
+   :::
 
 1. The provisioned kOps cluster will assign it's own set of pod network CIDR in the kube-proxy instance different than the one {{prodname}} expects. To set the cluster cidr for the kube-proxy to match the one expected by {{prodname}} edit the cluster config `kops edit cluster <name-of-your-cluster>` and add the the `kubeProxy` config with the `clusterCIDR` expected by the default {{prodname}} installation.
 
@@ -87,7 +95,11 @@ To use kOps to create a cluster with {{prodname}} networking and network policy:
          clusterCIDR: 192.168.0.0/16
    ```
 
-   > **Note:** For more advanced pod networking CIDR configuration, the requirement is to have `ipPools` CIDR set by the {{prodname}} installation to match cluster CIDR set in kube-proxy. Calico's `ipPools` setting is obtainable in the Installation resource `kubectl get installation -o yaml` and can be configured in the editting the operator manifest found in the [install instructions for {{prodname}}](kubernetes/generic-install.mdx).
+   :::note
+
+   For more advanced pod networking CIDR configuration, the requirement is to have `ipPools` CIDR set by the {{prodname}} installation to match cluster CIDR set in kube-proxy. Calico's `ipPools` setting is obtainable in the Installation resource `kubectl get installation -o yaml` and can be configured in the editting the operator manifest found in the [install instructions for {{prodname}}](kubernetes/generic-install.mdx).
+
+   :::
 
 1. The default size of the provisioned instance groups for the cluster might not be sufficient for the full installation of kubernetes and {{prodname}}. To increase the size of the instance groups run `kops edit ig <name-of-instance-group-in-your-cluster> --name <name-of-your-cluster>` and edit the following fields accordingly.
 
@@ -103,7 +115,11 @@ To use kOps to create a cluster with {{prodname}} networking and network policy:
 
 1. Once your cluster has been configured run `kops update cluster --name=<name-of-your-cluster>` to preview the changes. Then the same command with `--yes` option (ie. `kops update cluster --name=<name-of-your-cluster> --yes`) to commit the changes to AWS to create the cluster. It may take 10 to 15 minutes for the cluster to be fully created.
 
-   > **Note:** Once the cluster has been created, the `kubectl` command should be pointing to the newly created cluster. By default `kops>=1.19` does not update `kubeconfig` to include the cluster certificates, accesses to the cluster through `kubectl` must be configured.
+   :::note
+
+   Once the cluster has been created, the `kubectl` command should be pointing to the newly created cluster. By default `kops>=1.19` does not update `kubeconfig` to include the cluster certificates, accesses to the cluster through `kubectl` must be configured.
+
+   :::
 
 1. Validate that nodes are created.
 
