--- a/calico-enterprise_versioned_docs/version-3.15/getting-started/manifest-archive.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/getting-started/manifest-archive.mdx
@@ -62,9 +62,12 @@ In the patch release archive, navigate to the `manifests` folder.
       kubectl create -f <your-local-directory-archive>/manifests/custom-resources.yaml
       ```
 
-      > **NOTE**: For platforms like AKS or EKS, you must modify the command to be platform specific.
-      > EKS example: `kubectl create -f <your-local-directory-archive>/manifests/eks/custom-resources.yaml`
-      > {: .alert .alert-info}
+      :::note
+
+      For platforms like AKS or EKS, you must modify the command to be platform specific.
+      EKS example: `kubectl create -f <your-local-directory-archive>/manifests/eks/custom-resources.yaml`
+
+      :::
 
 </TabItem>
 <TabItem label="OpenShift" value="OpenShift-1">
@@ -80,14 +83,17 @@ In the patch release archive, navigate to the `ocp-manifests` folder which conta
 
    1. After the Kubernetes manifests directory is generated, copy the files from `install-manifests` instead of downloading the manifests.
 
-      > **NOTE**: Before creating the cluster, be sure to add an image pull secret in `install-manifests/02-pull-secret.yaml`
-      > {: .alert .alert-info}
+      :::note
+
+      Before creating the cluster, be sure to add an image pull secret in `install-manifests/02-pull-secret.yaml`
+
+      :::
 
 1. Install {{prodname}} resources:
 
-
-    ```batch
-    cd <your-local-directory-archive>/ocp-manifests/enterprise-resources && oc create -f
+   ```batch
+   cd <your-local-directory-archive>/ocp-manifests/enterprise-resources && oc create -f
+   ```
 
 </TabItem>
 <TabItem label="Features" value="Features-2">
