--- a/calico-enterprise_versioned_docs/version-3.15/networking/ipam/change-block-size.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/ipam/change-block-size.mdx
@@ -95,8 +95,13 @@ Verify that you are using {{prodname}} IPAM.
 
 ## How to
 
-> **Important!** Follow the steps in order to minimize pod connectivity disruption. Pods may lose connectivity when they are redeployed, and may lose external connectivity while in the temporary pool. Also, when pods are deleted, applications may be temporarily unavailable (depending on the type of application). Plan your changes accordingly.
-> The high-level steps to follow are:
+:::note
+
+Follow the steps in order to minimize pod connectivity disruption. Pods may lose connectivity when they are redeployed, and may lose external connectivity while in the temporary pool. Also, when pods are deleted, applications may be temporarily unavailable (depending on the type of application). Plan your changes accordingly.
+
+:::
+
+The high-level steps to follow are:
 
 1. [Create a temporary IP pool](#create-a-temporary-ip-pool)
    **Note**: The temporary IP pool must not overlap with the existing one.
