--- a/calico-enterprise_versioned_docs/version-3.15/reference/resources/globalthreatfeed.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/reference/resources/globalthreatfeed.mdx
@@ -210,9 +210,13 @@ expression, subject to the limitations mentioned below, that evaluates
 to a list of strings. For example: `$.` is valid for `["a", "b", "c"]`,
 and `$.a` is valid for `{"a": ["b", "c"]}`.
 
-> **LIMITATIONS**: No support for subexpressions and filters. Strings in
-> brackets must use double quotes. It cannot operate on JSON decoded
-> struct fields.
+:::caution
+
+No support for subexpressions and filters. Strings in
+brackets must use double quotes. It cannot operate on JSON decoded
+struct fields.
+
+:::
 
 #### CSV
 
