--- a/calico-enterprise_versioned_docs/version-3.15/threat/anomaly-detection/storage.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/threat/anomaly-detection/storage.mdx
@@ -33,7 +33,11 @@ Anomaly detection requires 10Gi for storage. Note that training models are relat
 Determine the storage types that are available on your cluster. If you are using dynamic provisioning, verify it is supported.
 If you are using local disks, you may find the [sig-storage local static provisioner](https://github.com/kubernetes-sigs/sig-storage-local-static-provisioner) useful. It creates and manages PersistentVolumes by watching for disks mounted in a configured directory.
 
-> **Warning**: Do not use the host path storage provisioner. This provisioner is not suitable for production and results in scalability issues, instability, and data loss.
+:::caution
+
+Do not use the host path storage provisioner. This provisioner is not suitable for production and results in scalability issues, instability, and data loss.
+
+:::
 
 ## How to
 
