--- a/calico-enterprise_versioned_docs/version-3.15/networking/configuring/bgp.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/configuring/bgp.mdx
@@ -168,8 +168,12 @@ If the default BGP configuration resource does not exist, you need to create it 
 
 :::
 
-> **Note**: Disabling the node-to-node mesh will break pod networking until/unless you configure replacement BGP peerings using BGPPeer resources.
-> You may configure the BGPPeer resources before disabling the node-to-node mesh to avoid pod networking breakage.
+:::note
+
+Disabling the node-to-node mesh will break pod networking until/unless you configure replacement BGP peerings using BGPPeer resources.
+You may configure the BGPPeer resources before disabling the node-to-node mesh to avoid pod networking breakage.
+
+:::
 
 ### Change from node-to-node mesh to route reflectors without any traffic disruption
 
