--- a/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
@@ -85,13 +85,13 @@ In overview, the AWS-backed feature works as follows:
 
   :::caution
 
-  You must ensure that the CIDR(s) used for AWS-backed IP pool(s) are reserved in the AWS fabric.  
+  You must ensure that the CIDR(s) used for AWS-backed IP pool(s) are reserved in the AWS fabric.
   For example, by creating a dedicated VPC subnet for {{prodname}}. If the CIDR is not reserved; both
   {{prodname}} and AWS may try to assign the same IP address, resulting in a conflict.
 
   :::
 
-- Since they are a limited resource, {{prodname}} IPAM does not use AWS-backed pools by default. To request an  
+- Since they are a limited resource, {{prodname}} IPAM does not use AWS-backed pools by default. To request an
   AWS-backed IP address, a pod must have a resource request:
 
   ```yaml
@@ -294,7 +294,7 @@ Some IP addresses from the dedicated subnet are reserved for AWS and {{prodname}
 
 - The first four IP addresses in the subnet cannot be used. These are [reserved by AWS for internal use](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Subnets.html#vpc-sizing-ipv4).
 - Similarly, the last IP in the subnet (the broadcast address) cannot be used.
-- _In **Secondary-IP-per-workload** mode_, {{prodname}} requires one IP address from the subnet per secondary ENI  
+- _In **Secondary-IP-per-workload** mode_, {{prodname}} requires one IP address from the subnet per secondary ENI
   that it provisions (for use as the primary IP address of the ENI). In **ENI-per-workload** mode, this is not required.
 
 <Tabs>
@@ -900,7 +900,7 @@ EOF
   entirely by setting the environment variable to 0 (and by removing the `readinessProbe` stanza).
 - The `ICMP_PROBE_IPS` environment variable may be set to a comma-separated list of IPs.
   If set, the egress gateway pod will probe each IP periodically using an ICMP ping. If all pings fail then the egress
-  gateway will report non-ready via its health port. `ICMP_PROBE_INTERVAL` controls the interval between probes.  
+  gateway will report non-ready via its health port. `ICMP_PROBE_INTERVAL` controls the interval between probes.
   `ICMP_PROBE_TIMEOUT` controls the timeout before reporting non-ready if no probes succeed.
 - The `HTTP_PROBE_URLS` environment variable may be set to a comma-separated list of URLs.
   If set, the egress gateway pod will probe each external service periodically. If all probes fail then the egress
@@ -973,7 +973,6 @@ To add AWS Elastic IPs to the egress gateway pods, follow these steps:
   The format of the annotation is a string containing a JSON-formatted list of Elastic IP addresses:
 
   ```yaml
-
   ---
   template:
     metadata:
@@ -1123,11 +1122,16 @@ patch release.
 Because egress gateway deployments are not currently managed by the Tigera Operator, it is necessary to upgrade
 egress gateway deployments manually.
 
-> **Note**: When upgrading egress gateway deployments, both the image and the deployment spec need to be changed in
-> tandem; upgrading only the image version can result in a non-functioning egress gateway. Newer versions of the
-> egress gateway image require new volume mounts and environment variables and have other structural changes (such
-> as the addition of an `initContainer` in v3.15.0).
-> To upgrade an egress gateway deployment:
+:::note
+
+When upgrading egress gateway deployments, both the image and the deployment spec need to be changed in
+tandem; upgrading only the image version can result in a non-functioning egress gateway. Newer versions of the
+egress gateway image require new volume mounts and environment variables and have other structural changes (such
+as the addition of an `initContainer` in v3.15.0).
+
+:::
+
+To upgrade an egress gateway deployment:
 
 - Before upgrading egress gateways to a particular version, upgrade the other {{prodname}} components
   first. The egress gateway image should never be newer than the other {{prodname}} components. We recommend
