--- a/calico-enterprise_versioned_docs/version-3.15/reference/resources/compliance-reports/network-access.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/reference/resources/compliance-reports/network-access.mdx
@@ -28,9 +28,13 @@ spec:
 EOF
 ```
 
-> **Note**: There is a known issue that audit logs do not contain deletion events for resources that were
-> deleted implicitly as part of a namespace deletion event. Currently, this means policies and pods that have been
-> deleted in this way may still appear in the reports that cover any period within the next day.
+:::note
+
+There is a known issue that audit logs do not contain deletion events for resources that were
+deleted implicitly as part of a namespace deletion event. Currently, this means policies and pods that have been
+deleted in this way may still appear in the reports that cover any period within the next day.
+
+:::
 
 ## Downloadable reports
 
