--- a/calico-enterprise_versioned_docs/version-3.15/reference/resources/globalnetworkset.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/reference/resources/globalnetworkset.mdx
@@ -30,15 +30,19 @@ IPs that should match a source/destination selector within a
 [network policy](networkpolicy.mdx) rule whose `namespaceSelector` includes `global()`, it includes
 the CIDRs from any network sets that match the selector.
 
-> **Important**: Since {{prodname}} matches packets based on their source/destination IP addresses,
-> {{prodname}} rules may not behave as expected if there is NAT between the {{prodname}}-enabled node and the
-> networks listed in a network set. For example, in Kubernetes, incoming traffic via a service IP is
-> typically SNATed by the kube-proxy before reaching the destination host so {{prodname}}'s workload
-> policy will see the kube-proxy's host's IP as the source instead of the real source.
-> For `kubectl` [commands](https://kubernetes.io/docs/reference/kubectl/overview/), the following case-insensitive aliases
-> may be used to specify the resource type on the CLI:
-> `globalnetworkset.projectcalico.org`, `globalnetworksets.projectcalico.org` and abbreviations such as
-> `globalnetworkset.p` and `globalnetworksets.p`.
+:::note
+
+Since {{prodname}} matches packets based on their source/destination IP addresses,
+{{prodname}} rules may not behave as expected if there is NAT between the {{prodname}}-enabled node and the
+networks listed in a network set. For example, in Kubernetes, incoming traffic via a service IP is
+typically SNATed by the kube-proxy before reaching the destination host so {{prodname}}'s workload
+policy will see the kube-proxy's host's IP as the source instead of the real source.
+For `kubectl` [commands](https://kubernetes.io/docs/reference/kubectl/overview/), the following case-insensitive aliases
+may be used to specify the resource type on the CLI:
+`globalnetworkset.projectcalico.org`, `globalnetworksets.projectcalico.org` and abbreviations such as
+`globalnetworkset.p` and `globalnetworksets.p`.
+
+:::
 
 ## Sample YAML
 
