--- a/calico-enterprise_versioned_docs/version-3.15/reference/resources/ippool.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/reference/resources/ippool.mdx
@@ -52,9 +52,13 @@ spec:
 | allowedUses _(since v3.11.0)_      | Controls whether the pool will be used for automatic assignments of certain types. See [below](#allowed-uses).                                                                                                                              | Workload, Tunnel, HostSecondaryInterface                                                                                                                                                                               | list of strings            | `["Workload", "Tunnel"]`                      |
 | awsSubnetID _(since v3.11.0)_      | May be set to the ID of an AWS VPC Subnet that contains the CIDR of this IP pool to activate the AWS-backed pool feature. See [below](#aws-backed-pools).                                                                                   | Valid AWS Subnet ID.                                                                                                                                                                                                   | string                     |                                               |
 
-> **Important**: Do not use a custom `blockSize` until **all** {{prodname}} components have been updated to a version that
-> supports it (at least v2.3.0). Older versions of components do not understand the field so they may corrupt the
-> IP pool by creating blocks of incorrect size.
+:::note
+
+Do not use a custom `blockSize` until **all** {{prodname}} components have been updated to a version that
+supports it (at least v2.3.0). Older versions of components do not understand the field so they may corrupt the
+IP pool by creating blocks of incorrect size.
+
+:::
 
 ### Allowed uses
 
@@ -126,10 +130,14 @@ Reducing the block size from the default (e.g., using `28` for IPv4 to give 16 a
 For details on configuring IP pool node selectors, please read the
 [Assign IP addresses based on topology guide.](../../networking/ipam/assign-ip-addresses-topology.mdx).
 
-> **Tip**: To prevent an IP pool from being used automatically by {{prodname}} IPAM, while still allowing
-> it to be used manually for static assignments, set the `IPPool`'s `nodeSelector` to `!all()`. Since the selector
-> matches no nodes, the IPPool will not be used automatically and, unlike setting `disabled: true`, it can still be
-> used for manual assignments.
+:::tip
+
+To prevent an IP pool from being used automatically by {{prodname}} IPAM, while still allowing
+it to be used manually for static assignments, set the `IPPool`'s `nodeSelector` to `!all()`. Since the selector
+matches no nodes, the IPPool will not be used automatically and, unlike setting `disabled: true`, it can still be
+used for manual assignments.
+
+:::
 
 #### Selector reference
 
