--- a/calico-enterprise_versioned_docs/version-3.15/threat/suspicious-external-ips.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/threat/suspicious-external-ips.mdx
@@ -219,15 +219,19 @@ the appropriate information to the ingress controller logs.
    [access-log-path](https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/#access-log-path)
    in your configmap. Set this value to `/var/log/calico/ingress/ingress.log`
 
-   > **Note**: Setting the access-log-path will reroute logs in NGINX from writing to stdout.
-   > This means that the `kubectl log` command will no longer return logs since they are now
-   > being routed to the file of your choice. These logs are still accessible within your
-   > containers at the new location. If you are also reading the container logs mounted on your
-   > host, NGINX info will no longer be at the stdout file `0.log` but will now be at the newly
-   > specified log location. To have logs readable through the `kubectl log` command, you will
-   > need to follow the same directions as the NGINX Inc-maintained NGINX ingress controller
-   > but instead mount in your NGINX template according to the
-   > [Kubernetes community-maintained ingress controller documentation](https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/custom-template/).
+   :::note
+
+   Setting the access-log-path will reroute logs in NGINX from writing to stdout.
+   This means that the `kubectl log` command will no longer return logs since they are now
+   being routed to the file of your choice. These logs are still accessible within your
+   containers at the new location. If you are also reading the container logs mounted on your
+   host, NGINX info will no longer be at the stdout file `0.log` but will now be at the newly
+   specified log location. To have logs readable through the `kubectl log` command, you will
+   need to follow the same directions as the NGINX Inc-maintained NGINX ingress controller
+   but instead mount in your NGINX template according to the
+   [Kubernetes community-maintained ingress controller documentation](https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/custom-template/).
+
+   :::
 
    **NGINX Inc-maintained NGINX ingress controller**
    If you are using the NGINX Inc maintained ingress controller, create a custom
