DOCS-1144: Remove liquid syntax in tabs

--- a/calico-enterprise_versioned_docs/version-3.15/reference/component-resources/configuration.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/reference/component-resources/configuration.mdx
@@ -236,9 +236,8 @@ allocates blocks of addresses and single addresses alike in response to cluster 
 Host local IPAM is generally only used on clusters where integration with the Kubernetes [route controller](https://kubernetes.io/docs/concepts/architecture/cloud-controller/#route-controller) is necessary.
 Note that some Calico features - such as the ability to request a specific address or pool for a pod - require Calico IPAM in order to function, and will not work with host-local IPAM enabled.
 
-{% tabs %}
-<label:Operator,active:true>
-<%
+<Tabs>
+<TabItem label="Operator" value="Operator-0">
 
 The `host-local` IPAM plugin can be configured by setting the `Spec.CNI.IPAM.Plugin` field to `HostLocal` on the [operator.tigera.io/Installation](../installation/api.mdx#operator.tigera.io/v1.Installation) API.
 
@@ -569,8 +568,7 @@ For example:
 }
 ```
 
-%>
-
-{% endtabs %}
+</TabItem>
+</Tabs>
 
 [installation]: ../installation/api.mdx
